Unit Base Building

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,9 +54,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Units\UnitProjectile.cs" />
+    <Compile Include="Assets\Scripts\Combat\Health.cs" />
     <Compile Include="Assets\Scripts\Combat\Targeter.cs" />
     <Compile Include="Assets\Scripts\Units\UnitCommandGiver.cs" />
     <Compile Include="Assets\Scripts\Combat\Targetable.cs" />
+    <Compile Include="Assets\Scripts\Combat\HealthDisplay.cs" />
     <Compile Include="Assets\Scripts\Units\Unit.cs" />
     <Compile Include="Assets\Scripts\Networking\RTSPlayer.cs" />
     <Compile Include="Assets\Scripts\Networking\RTSNetworkManager.cs" />
@@ -64,8 +66,8 @@
     <Compile Include="Assets\Scripts\Units\UnitSelectionHandler.cs" />
     <Compile Include="Assets\Scripts\Units\UnitMovement.cs" />
     <Compile Include="Assets\Scripts\Units\UnitFiring.cs" />
-    <Compile Include="Assets\Scripts\Combat\Health.cs" />
-    <Compile Include="Assets\Scripts\Combat\HealthDisplay.cs" />
+    <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
+    <Compile Include="Assets\Scripts\Buildings\GameOverHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Mirror\Plugins\Mono.Cecil\Mono.CecilX.dll" />
